initial author routes

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,8 +6,7 @@
     <title>BookSearch</title>
 </head>
 
-    <h1>before</h1>
+    <%- include("../partials/header") %> 
     <%- body %>
-    <h1>after</h1>
 </body>
 </html>
