--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,11 @@
-hello body part
+<h2>Recently added</h2>
+<div>
+  <% books.forEach((book) => { %>
+  <img
+    width="100"
+    height="150"
+    src="<%= book.coverImagePath %>"
+    alt="<% book.title %>"
+  />
+  <% }) %>
+</div>
