--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,9 @@
 <header>
   <nav>
+    <a href="/">BookDrawer</a>
     <ul>
+      <li><a href="/books">Books</a></li>
+      <li><a href="/books/new">Books</a></li>
       <li><a href="/authors">Author</a></li>
       <li><a href="/authors/new">Add author</a></li>
     </ul>
