--- a/views/book/new.ejs
+++ b/views/book/new.ejs
@@ -1,5 +1,5 @@
 <h1>new author</h1>
-<form action="/books" method="POST" enctype="multipart/form-data">
+<form action="/books" method="POST">
   <%- include("../partials/errorMessage") %> <%- include("_formField") %>
 
   <a href="/authors">Cancel</a>
