--- a/views/author/index.ejs
+++ b/views/author/index.ejs
@@ -6,4 +6,6 @@
 <br />
 <% authors.forEach((author) => { %>
 <div><%= author.name %></div>
-<% }) %>
+<a href="/authors/<%= author.id%>">View</a>
+<a href="/authors/edit/<%= author.id%>">edit</a>
+<%- include("../partials/deleteForm",{url:`/authors/${author.id}`}) %> <% }) %>
