--- a/views/author/authorView.ejs
+++ b/views/author/authorView.ejs
@@ -4,12 +4,13 @@
 <%- include("../partials/deleteForm",{url:`/authors/${author.id}`}) %> <%
 if(booksByAuthor.length > 0) { %>
 <h1>Books by Author</h1>
-
 <% booksByAuthor.forEach((book) => { %>
-<img
-  width="100"
-  height="150"
-  src="<%= book.coverImagePath %>"
-  alt="<% book.title %>"
-/>
+<a href="/books/<%=book.id%>">
+  <img
+    width="100"
+    height="150"
+    src="<%= book.coverImagePath %>"
+    alt="<% book.title %>"
+  />
+</a>
 <% }) %> <%}%>
