--- a/views/book/_formField.ejs
+++ b/views/book/_formField.ejs
@@ -5,7 +5,7 @@
 <div>
   <label for="name">Authors</label>
   <select name="author">
-    <% authors.forEach(author => { %> <% if(author.id === book.author) { %>
+    <% authors.forEach(author => { %> <% if(author.id == book.author) { %>
     <option
       selected
       label="<%= author.name %>"
