--- a/views/book/index.ejs
+++ b/views/book/index.ejs
@@ -24,6 +24,8 @@
 <div>
 
 <% books.forEach((book) => { %>
+<a href="/books/<%=book.id%>">
 <img width="100" height="150" src="<%= book.coverImagePath %>" alt="<% book.title %>">
+</a>
 <% }) %>
 </div>
