--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <a href="/">BookDrawer</a>
     <ul>
       <li><a href="/books">Books</a></li>
-      <li><a href="/books/new">Books</a></li>
+      <li><a href="/books/new">New book</a></li>
       <li><a href="/authors">Author</a></li>
       <li><a href="/authors/new">Add author</a></li>
     </ul>
